ui bug fixes, display account name

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -22,14 +22,20 @@
         <div id='photocont'><div id="photo"><p id = 'snp'>There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div><p id = 'pt'>LAST PHOTO FROM CLOVER</p>
         <div id='map'></div>
         <canvas id='clover3dview'></canvas>
-        <p id = 'ct'>Your Clover</p>
-        <p id = 'status'>🞄 Disconnected</p>
+        <div id="account">
+            <p id = 'ct'></p>
+            <p id = 'status'>🞄 Disconnected</p>
+        </div>
         <p id = 'alt'></p><p id = 'volt'></p>
         <div id = 'actions'>
-            <button id = 'l'>Land</button>
-            <button id = 'rtp'>Return</button><br/><br/>
-            <button id = 'h'>Hover</button>
-            <button id = 'r'>Disarm</button><br/><br/>
+            <div id="lrt">
+                <button id = 'l'>Land</button>
+                <button id = 'rtp'>Return</button>
+            </div>
+            <div id="hr">
+                <button id = 'h'>Hover</button>
+                <button id = 'r'>Disarm</button>
+            </div>
             <button id = 'settings'>Settings</button>
         </div>
         <div id = 'upload'>
