add arrow functionality

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -24,7 +24,7 @@
             <button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
         </div>
         <div id = 'title'><h1>The<br/>Clover Rescue<br/>Project</h1></div><br><br>
-        <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down" alt='down'/></div>
+        <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down" alt='down' onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});'/></div>
         <div id = "main">
             <div id="projectContainer">
                 <p id = 'pt'>Project</p><br>
