add arrow functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button id = 'app' onclick = "location.href = './app/desktop/'">App</button>
             </div>
             <h1 id='title'>The Clover Rescue Project</h1>
-            <img id = 'down' src = './assets/line-angle-down.svg' alt='down'/>
+            <img id = 'down' src = './assets/line-angle-down.svg' alt='down' onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});' />
         </div>
         <div id = 'main'>
             <img id = 'mb1' src = './assets/mb1.jpg' alt='tx'/>
