desktop ui update

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -28,12 +28,12 @@
         <p id = 'alt'></p><p id = 'volt'></p>
         <div id = 'actions'>
             <div id="lrt">
-                <button id = 'l'>Land</button>
-                <button id = 'rtp'>Return</button>
+                <button id = 'l' class="withripple">Land</button>
+                <button id = 'rtp' class="withripple">Return</button>
             </div>
             <div id="hr">
-                <button id = 'h'>Hover</button>
-                <button id = 'r'>Disarm</button>
+                <button id = 'h' class="withripple">Hover</button>
+                <button id = 'r' class="withripple">Disarm</button>
             </div>
             <button id = 'settings'>Settings</button>
         </div>
