mobile ui update

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -27,12 +27,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div id="lrt">
-                        <button id = 'l'>Land</button>
-                        <button id = 'rtp'>Return</button>
+                        <button id = 'l' class="withripple">Land</button>
+                        <button id = 'rtp' class="withripple">Return</button>
                     </div>
                     <div id="hr">
-                        <button id = 'h'>Hover</button>
-                        <button id = 'r'>Disarm</button>
+                        <button id = 'h' class="withripple">Hover</button>
+                        <button id = 'r' class="withripple">Disarm</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
