add terms of use, license agreement and privacy policy links

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -44,6 +44,7 @@
                 <button id = 'signup' onclick = 'signup();'>Sign Up</button>
                 <p id = 'status'></p>
             </div>
+            <p id = 'floor'><a href="../termsofuse.html">Terms of Use</a> | <a href="../license.html">License Agreement</a> | <a href="../privacypolicy.html">Privacy Policy</a></p>
         </div>
         <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo' alt='loading...'/></div>
         <script src = 'index.js'></script>
