add terms of use, license agreement and privacy policy links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <button id = 'signup' onclick = 'signup();'>Sign Up</button>
                 <p id = 'status'></p>
             </div>
-            <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
+            <p id = 'floor'>Clover Rescue Team | CopterHack 2022 | <a href="./termsofuse.html">Terms of Use</a> | <a href="./license.html">License Agreement</a> | <a href="./privacypolicy.html">Privacy Policy</a></p>
         </div>
         <img id = 'arrowtop' src = './assets/line-angle-down.svg' onclick="smoothJumpUp();" alt='^'/>
         <div id = 'loading'><img src = '/assets/logo_x192.svg' id='loadingLogo'/></div>
